// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`app/providers > initializes posthog and renders children 1`] = `
<div
  data-testid="posthog-provider"
>
  <div>
    Provider child
  </div>
</div>
`;

exports[`app/providers > mounts the next themes provider after the first effect 1`] = `
<div
  data-attribute="class"
  data-testid="theme-provider"
>
  <div>
    Themed child
  </div>
</div>
`;
